refactor: using generator in test to reuse code